[package]
name = "time-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = {version = "0.20.0", features = ["csr"]}
material-yew = {version = "0.3.0", features = ["list", "button", "textfield", "icon-button"] }
gloo = "0.8.1"
js-sys = "0.3.64"
chrono = "0.4.26"
futures = "0.3.28"
